Added images and mechanics, as well as small additions to rimworld

--- a/2.beispiele/2.2.neuerscheinungen/2.2.1.rimworld.tex
+++ b/2.beispiele/2.2.neuerscheinungen/2.2.1.rimworld.tex
@@ -88,3 +88,6 @@ Das Spiel hat eine große Vielfalt an verschiedener Ressourcen. Darunter fallen 
     \end{center}
     \caption{Befehle, Screenshot aus RimWorld} \label{image:rimworldorders}
 \end{figure}
+
+\newparagraph{Haltbarkeiten}
+Viele greifbare Ressourcen, welche auch in der realen Welt aufgrund von Korrosion zerstört würden oder als Lebensmittel mit der Zeit ablaufen, besitzen eine Haltbarkeit. Diese sinkt stetig mit vergehender Zeit von 100 auf 0. Ist diese auf 0 gesunken, verschwindet die Ressource aus dem Spiel, damit stellt diese Mechanik der Haltbarkeit ein Drain dar. Manche Ressourcen benötigen ein Dach oder einen Raum, damit die Haltbarkeit nicht weiter sinkt, andere wiederum und darunter primär Lebensmittel, benötigen eine sehr niedrige Temperatur, damit sie konserviert werden können.
