Finished transcripts, added mechanics and analysis

--- a/3.analyse/3.1.interview.tex
+++ b/3.analyse/3.1.interview.tex
@@ -6,26 +6,28 @@
     \caption{Die Vier Phasen des Interviews} \label{image:interviewphases}
 \end{figure}
 \subsection{Interviews}
-Für die Ermittlung gut funktionierender Mechaniken und Konzepte wird auf die Methode des kontextuellen Interviews zurückgegriffen \cite*[]{holtzblatt_beyer_1997}. Dazu wird ein Leitfadeninterview angefertigt, um qualitative Daten von den Teilnehmern zu extrahieren und daraus Hypothesen anzufertigen \cite*[]{baur_blasius}. Nachdem die Hypothesen erarbeitet wurden, werden diese mittels einer Umfrage in einem breiten Umfang überprüft. Es werden drei Personen ausgewählt, wobei die Erfahrung aller Personen in Bezug auf das Spiel und das Genre generell variiert. Diese Personen, im Folgenden auch \textit{Probanden} genannt, werden in Einzelgesprächen dazu gebeten, dass Spiel eine Stunde lang zu spielen. Einzelgespräche beziehungsweise -interviews sind Gruppengesprächen vorzuziehen, da die einzelnen Probanden einen entspannteren Zeitplan haben, sich gänzlich auf das Spiel und die Fragen fokussieren können und keine Gefahr laufen, abgelenkt zu werden oder mit anderen Probanden in Gespräche zu gelangen \cite*[]{lankoski_bjork}. Das Interview gliedert sich in vier Phasen (vgl. \autoref{image:interviewphases}):
-\subsubsection{Einleitung}
+Für die Ermittlung gut funktionierender Mechaniken und Konzepte wird auf die Methode des kontextuellen Interviews zurückgegriffen \cite*[]{holtzblatt_beyer_1997}. Dazu wird ein Leitfadeninterview angefertigt, um qualitative Daten von den Teilnehmern zu extrahieren und daraus Hypothesen anzufertigen \cite*[]{baur_blasius}. Nachdem die Hypothesen erarbeitet wurden, werden diese mittels einer Umfrage in einem breiten Umfang überprüft. Es werden drei Personen ausgewählt, wobei die Erfahrung aller Personen in Bezug auf das Spiel und das Genre generell variiert. Diese Personen, im Folgenden auch \textit{Probanden} genannt, werden in Einzelgesprächen dazu gebeten, dass Spiel eine Stunde lang zu spielen. Einzelgespräche beziehungsweise -interviews sind Gruppengesprächen vorzuziehen, da die einzelnen Probanden einen entspannteren Zeitplan haben, sich gänzlich auf das Spiel und die Fragen fokussieren können und keine Gefahr laufen, abgelenkt zu werden oder mit anderen Probanden in Gespräche zu gelangen \cite*[]{lankoski_bjork}. Das Interview gliedert sich in vier Phasen (vgl. \autoref{image:interviewphases}).
+
+\subsubsection{Versuchsaufbau}
+Das Interview ist, wie bereits erläutert, in vier Phasen gegliedert und wird in der Wohnung des Interviewers durchgeführt. Wichtig ist, dass alle Probanden leicht andere Qualifikationen besitzen, sodass ein breites Bild über den Zustand des untersuchten Spiels erstellt werden kann. Es ist fundamental zu erkennen, wie ein Spiel von Kennern, wie auch von Neulingen empfunden wird.
+ 
+\paragraph {Einleitung}
 Um die erhobenen Daten richtig kategorisieren zu können, werden als erstes grundlegende Daten zu der Person an sich erfasst:
 \begin{itemize}
     \item F1: Wie alt bist du?
     \item F2: Nach welchem Geschlecht identifizierst du dich?
 \end{itemize}
 
-\subsubsection{Aufwärmen}
+\paragraph{Aufwärmen}
 Im zweiten Schritt des Interviews werden etwas spezifischere Fragen zu der Erfahrung und dem Verhalten bezüglich Videospielen gestellt:
 \begin{itemize}
     \item F3: Hast du bereits Erfahrung in Videospielen?
     \item F4: Hast du bereits Erfahrung in Resource Management Games?
     \item F5: Hast du RimWorld bereits zuvor gespielt?
-    \item F6: Bevorzugst du Konsole oder Computer?
-    \item F7: Bevorzugst du Controller oder Tastatur und Maus?
 \end{itemize}
 
-\subsubsection{Beobachtung}
-Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird aufgefordert, das Videospiel \textit{RimWorld} zu spielen. Es ist von fundamentaler Wichtigkeit für diese Phase, das die beobachtende Person keinerlei Versuch unternimmt, sich in das Spielgeschehen oder das Verhalten der beobachteten Person einmischt. Es wird auch unterlassen, begangene Fehler aufzuklären oder in irgend einer anderen Art und Weise zu helfen. Es ist wichtig zu erwähnen, dass nicht alle Fragen zwangsweise gestellt werden. Diese Fragen dienen lediglich als Katalog möglicher Fragen, die situativ gestellt werden können.
+\paragraph{Beobachtung}
+Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird dazu aufgefordert, das Videospiel \textit{RimWorld} zu spielen. Es ist von fundamentaler Wichtigkeit für diese Phase, das die beobachtende Person keinerlei Versuch unternimmt, sich in das Spielgeschehen oder das Verhalten der beobachteten Person einmischt. Es wird auch unterlassen, begangene Fehler aufzuklären oder in irgend einer anderen Art und Weise zu helfen, falls nicht anders möglich. Außerdem ist es wichtig zu erwähnen, dass nicht alle Fragen zwangsweise gestellt werden. Diese Fragen dienen lediglich als Katalog möglicher Fragen, die situativ gestellt werden können.
 
 \begin{itemize}
     \item F8: Welche Emotion wird gerade verspürt?
@@ -38,7 +40,7 @@ Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird aufgeforde
     \item F15: Kommt der Proband gut mit der indirekten Anweisungsmechanik zurecht?
 \end{itemize}
 
-\subsubsection{Abschluss}
+\paragraph{Abschluss}
 In der Abschlussphase wird der Proband gebeten, eine eigene Meinung abzugeben. Außerdem können Fehler aufgeklärt werden und inhaltliche Fragen beantwortet werden, ohne dass sie nun das Verhalten im Spiel verzerren.
 
 \begin{itemize}
@@ -50,3 +52,23 @@ In der Abschlussphase wird der Proband gebeten, eine eigene Meinung abzugeben. A
     \item F21: Wie findest du die vielen zufällig generierten Umstände?
 \end{itemize}
 
+
+\subsubsection{Probanden}
+Für die Interviews werden exakt drei Personen ausgewählt, welche sich allesamt in ihrer Erfahrung in Videospielen und auch in ihrer Erfahrung in RimWorld unterscheiden. Es ist damit zu erhoffen, dass ein möglichst breites Spektrum an Informationen extrahiert werden kann.
+
+% Please add the following required packages to your document preamble:
+% \usepackage{graphicx}
+\begin{table}[]
+    \centering
+    \caption{Jeweilige Antworten der Probanden auf die Einleitungsfragen}
+    \label{table:interview}
+    \begin{tabular}{|l|c|c|c|}
+    \hline
+                                  & Proband A & Proband B & Proband C \\ \hline
+    Alter                         & 19        & 23        & 24        \\ \hline
+    Geschlecht                    & \female        & \male         & \male        \\ \hline
+    Erfahrung Videospiele         & $\upchi$      & \checkmark        & \checkmark        \\ \hline
+    Erfahrung Resource Management & $\upchi$      & \checkmark        & \checkmark       \\ \hline
+    Erfahrung RimWorld            & $\upchi$      & $\upchi$      & \checkmark       \\ \hline
+    \end{tabular}
+    \end{table}
