--- a/0.verzeichnisse/0.1.glossar.tex
+++ b/0.verzeichnisse/0.1.glossar.tex
@@ -1,11 +1,11 @@
 \section*{Glossar}
 
-\begin{tabularx}{0.8\textwidth} { 
-    | >{\raggedright\arraybackslash}X 
-    | >{\centering\arraybackslash}X 
-    | >{\raggedleft\arraybackslash}X | }
-   \hline
-   Game Engine & Ein Framework zur Erstellung und Entwicklung von Computerspielen \\
-   \hline
-  \hline
-  \end{tabularx}
+%\begin{tabularx}{0.8\textwidth} { 
+%    | >{\raggedright\arraybackslash}X 
+%   | >{\centering\arraybackslash}X 
+%    | >{\raggedleft\arraybackslash}X | }
+%   \hline
+%   Game Engine & Ein Framework zur Erstellung und Entwicklung von Computerspielen \\
+%   \hline
+%  \hline
+%  \end{tabularx}
